--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
   <div class="experience-card">
     <h3>Senior MLOps Engineer – Farmers Insurance (Sept 2022 – Present)</h3>
     <ul>
-      <li>Built ML lifecycle infrastructure including CI/CD, ML instance management, API testing, image vulnerability management, DR setup</li>
+      <li>Built and managed end-to-end ML lifecycle infrastructure, including CI/CD pipelines, automated testing, and model versioning for seamless deployment across environments.</li> <li>Optimized ML instance management with dynamic GPU/CPU provisioning, autoscaling, and cost-efficient resource allocation.</li> <li>Developed robust API testing frameworks and integrated image vulnerability scanning to ensure secure, reliable model endpoints.</li> <li>Implemented disaster recovery strategies, high-availability architectures, and automated backups for mission-critical ML workloads.</li> <li>Standardized monitoring, observability, and compliance practices, enabling proactive detection of model drift, performance issues, and audit readiness.</li>
+
       <li>Tools: AWS SageMaker, ECR, S3, CloudWatch, Dynatrace, Splunk, Databricks, MLflow, Snowflake, EMR Serverless, Lambda, IAM, Terraform, Git, Jenkins</li>
     </ul>
   </div>
@@ -74,7 +75,9 @@
   <div class="experience-card">
     <h3>Senior DBA / DevOps Engineer – Bank of America (2016 – Sept 2022)</h3>
     <ul>
-      <li>Database administration, migrations, CI/CD pipelines, Kubernetes orchestration, cloud automation, security compliance</li>
+      <li>Designed, developed, and implemented complex databases, often leveraging new technologies. His role included performing SQL database administration tasks such as managing SSDS, conducting database consistency checks (DBCC), creating backups, and re-indexing.</li> 
+      <li>Performed database migrations, troubleshot database issues, and recommended or implemented SQL tuning enhancements.</li> <li>Managed infrastructure operations with a focus on optimization, disaster recovery planning, and operational excellence to ensure high availability and resilience.</li> <li>Classified application tier levels and defined Service Level Agreements (SLAs) to provide high-quality support and maintain optimal system availability.</li> <li>Designed and implemented CI/CD pipelines using Jenkins, AWS CodePipeline, and Azure DevOps to automate deployment processes and improve software delivery efficiency.</li> <li>Performed container orchestration and management using Kubernetes (EKS, AKS) and Docker, ensuring scalable and efficient microservices deployments.</li> <li>Automated infrastructure provisioning and configuration using Terraform, AWS CloudFormation, and Python, streamlining cloud resource management.</li> <li>Worked extensively with AWS services, including S3, KMS, IAM, EC2, ECS, Batch, ECR, and Lambda, to build and manage cloud-based solutions.</li> <li>Worked extensively with MSSQL Server (2008–2016), SSRS, SSAS, SSIS, and Windows Server (2008–2016). Responsibilities included installation, configuration, support, administering, maintaining, and implementing policies and procedures to ensure the security and integrity of company databases.</li> <li>Participated in enhancing network functionalities and extensively worked with Ansible for automating cloud provisioning, configuration management, application deployment, and intra-service orchestration. Developed scripts for Ansible playbooks to streamline processes and improve system efficiency.</li> <li>Collaborated with development, testing, deployment, systems operations, and release management teams.</li> <li>Created Confluence and JIRA tickets, designing Visio flowcharts, and managing customer implementations.</li> 
+      <li>Documented core solutions to ensure comprehensive and reliable records for ongoing and future initiatives.</li>
       <li>Tools: AWS, Azure DevOps, Docker, Ansible, MSSQL, Python, Shell, Terraform, Jenkins, GitHub, RedHat Linux, SSRS/SSAS/SSIS, PowerShell</li>
     </ul>
   </div>
@@ -116,14 +119,44 @@
   <div class="project-card">
     <h3>Algorithmia → AWS SageMaker Migration</h3>
     <p>Migrated ML models to AWS SageMaker for scalable, reliable deployment.</p>
+   <p> Data Engineering & Streaming: Building ETL and streaming workflows with AWS Glue, Kinesis, and other AWS data services, enabling real-time and batch data pipelines. </p>
+
+<p>Database & Query Expertise: Managing relational databases with PostgreSQL, as well as working with graph databases such as Neptune and Neo4j, optimizing queries for complex relationships and analytics. </p>
+
+<p><Vector Search & RAG Pipelines: Implementing vector search capabilities and retrieval-augmented generation (RAG) workflows for large-scale knowledge retrieval and AI-driven applications. </p>
+
+<p> Vector Infrastructure & Automation: Leveraging Infrastructure-as-Code tools including Terraform, CDK, and CloudFormation for scalable, repeatable deployments; scripting with Python and Bash for automation and operational tasks. </p>
+
+<p>Observability & Monitoring: Establishing strong observability practices using CloudWatch, New Relic, and custom monitoring dashboards to ensure reliability and performance. </p>
+
+<p>Optimization & Cost Efficiency: Continuously tuning infrastructure and ML workflows to optimize performance, resource usage, and operational costs. </p>
   </div>
   <div class="project-card">
     <h3>Infrastructure Cost Reduction</h3>
     <p>Reduced $400K annual infrastructure cost via optimized hosting, compute, and storage.</p>
+    <p>Optimize cloud infrastructure costs across AWS, Azure, and GCP by analyzing usage patterns, rightsizing resources, and implementing cost allocation strategies. </p>
+
+<p>Implement FinOps frameworks and governance policies to enforce budgeting, tagging, and cost accountability across business units. </p>
+
+<p>Monitor cloud spend using tools like AWS Cost Explorer, CloudWatch, CloudHealth, and Datadog; generate reports and provide actionable insights to engineering and finance teams. </p>
+
+<p>Collaborate with DevOps and engineering teams to design cost-efficient architectures without compromising performance or scalability. </p>
+
+<p>Automate cost management and reporting using Python, Terraform, or CloudFormation scripts. </p>
+
+<p>Forecast cloud budgets, track KPIs, and ensure alignment of resource usage with organizational financial goals. </p>
+
+<p>Lead cloud cost optimization initiatives, reducing annual infrastructure spend by negotiating reserved instances, implementing autoscaling, and leveraging spot/preemptible instances. </p>
+
+<p>Conduct regular audits of cloud resources to identify underutilized services, orphaned instances, and inefficient workflows.</p>
   </div>
   <div class="project-card">
     <h3>Automated ML Pipelines</h3>
     <p>Built automated resource scaling and deployment pipelines for high availability and low latency.</p>
+    <p>Designed and implemented automated end-to-end ML pipelines using SageMaker Pipelines, MLflow, and Kubeflow, ensuring reproducibility, model versioning, and CI/CD integration.</p>
+     <p>Built automated resource scaling mechanisms leveraging AWS Auto Scaling, ECS/EKS scaling policies, and Lambda to maintain high availability and low-latency inference.</p> 
+     <p>Integrated infrastructure-as-code (Terraform, CloudFormation, CDK) for pipeline deployment, enabling consistent environments across development, staging, and production.</p> <p>Automated monitoring of ML pipelines and infrastructure using CloudWatch, Datadog, and custom alerting to proactively detect drift, latency spikes, or failures.</p> <p>Implemented event-driven orchestration using EventBridge, SQS, and Step Functions to trigger pipeline execution based on new data arrival or model retraining schedules.</p> <p>Optimized resource allocation by dynamically provisioning GPU/CPU instances for training and inference workloads, reducing cost while maintaining performance SLAs.</p> <p>Developed automated rollback and canary deployment strategies to ensure safe model updates without disrupting production services.</p> 
+    <p>Standardized logging, metrics, and observability across pipelines to provide actionable insights and support compliance requirements.</p>
   </div>
 </section>
 
@@ -148,7 +181,9 @@
       <p><strong>Phone:</strong> +1 919-995-0054</p>
       <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/chandra24/" target="_blank">linkedin.com/in/chandra24/</a></p>
       <p><strong>GitHub:</strong> <a href="https://github.com/chandra7924/" target="_blank">github.com/chandra7924/</a></p>
+      <p><strong>Intro:</strong> <a href="https://chandra7924.github.io/myprotfolio/" target="_blank">MyProfile/</a></p>
     </div>
+
     <div>
       <form>
         <input type="text" placeholder="Name" style="width:100%; padding:10px; margin-bottom:10px;"><br>
