--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 <p>Database & Query Expertise: Managing relational databases with PostgreSQL, as well as working with graph databases such as Neptune and Neo4j, optimizing queries for complex relationships and analytics. </p>
 
-<p><Vector Search & RAG Pipelines: Implementing vector search capabilities and retrieval-augmented generation (RAG) workflows for large-scale knowledge retrieval and AI-driven applications. </p>
+<p> Vector Search & RAG Pipelines: Implementing vector search capabilities and retrieval-augmented generation (RAG) workflows for large-scale knowledge retrieval and AI-driven applications. </p>
 
 <p> Vector Infrastructure & Automation: Leveraging Infrastructure-as-Code tools including Terraform, CDK, and CloudFormation for scalable, repeatable deployments; scripting with Python and Bash for automation and operational tasks. </p>
 
