--- a/index.html
+++ b/index.html
@@ -108,7 +108,11 @@
     </div>
     <div class="service-card">
       <h3>MLOps Consulting</h3>
-      <p>End-to-end ML lifecycle management, pipeline automation, model monitoring, deployment best practices.</p>
+      <p>Managed end-to-end ML lifecycle, including model development, training, deployment, and monitoring for production environments. </p>
+
+<p>Designed and automated scalable ML pipelines to improve reproducibility, efficiency, and CI/CD integration. </p>
+
+<p> Implemented best practices for model deployment, versioning, and monitoring to ensure reliability, performance, and operational excellence.</p>
     </div>
   </div>
 </section>
