--- a/index.html
+++ b/index.html
@@ -104,7 +104,16 @@
   <div class="grid-2">
     <div class="service-card">
       <h3>Cloud Solutions</h3>
-      <p>Design, automation, and deployment of scalable cloud architectures.</p>
+      <p>
+Cloud Architecture & Deployment: Designed end-to-end solutions on AWS and Azure, leveraging services like EC2, S3, RDS, AKS, and EKS for reliable, scalable infrastructures. </p>
+
+<p> Automation & CI/CD: Built automated deployment pipelines using Terraform, CloudFormation, AWS CDK, Jenkins, and GitHub Actions to accelerate delivery and reduce manual errors. </p>
+
+<p>Monitoring & Optimization: Implemented observability with Datadog and Dynatrace, optimized compute resources, and fine-tuned costs to reduce infrastructure spend by up to 30–40%. </p>
+
+<p> Security & Compliance: Applied Kubernetes and cloud security best practices, including role-based access, secret management, and network policies for enterprise-grade deployments. </p>
+
+      </p>
     </div>
     <div class="service-card">
       <h3>MLOps Consulting</h3>
